--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -2,6 +2,7 @@
 {% block title %}Admin ManageCourse{% endblock %}
 {% block content %}
 <div class="menu-section">
+    <h2>Manage Course</h2>
     <!-- Top Centered Tabs -->
     <div class="tab-container">
         <div class="tab-nav2">
@@ -61,7 +62,7 @@
         <div id="manualSection" class="function-frame">
             <h4 style="text-align: center;">Manual Data Entry Section</h4>
             <div class="profile-frame">
-                <div class="form-right">
+                <div class="form-left">
                     <label id="departmentLabel">Department</label>
                     <select name="courseDepartment" required>
                         <option value="" disabled selected>Select Department</option>
@@ -81,7 +82,7 @@
                     <label>Course Name</label>
                     <input type="text" name="courseName" value="{{ courseName_text }}" required>
                 </div>
-                
+
                 <div class="form-right">
                     <label>Course Credit Hour(s)</label>
                     <input type="number" name="courseHour" value="{{ courseHour_text }}" required><br>
@@ -90,7 +91,7 @@
                     <input type="text" name="coursePractical" value="{{ coursePractical_text }}"><br>
 
                     <lable>Tutorial Lecturer</lable>
-                    <input type="number" name="courseTutorial" value="{{ courseTutorial_text }}">
+                    <input type="text" name="courseTutorial" value="{{ courseTutorial_text }}">
                 </div>
             </div>
             
