--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -21,6 +21,7 @@
     <form id="uploadForm" action="{{ url_for('admin_manageExam') }}" method="POST" enctype="multipart/form-data">
         <div id="uploadSection" class="function-frame">
             <div class="form-left" style="width: 100%">
+                <h4 style="text-align: center;">File Upload Section</h4>
                 <label for="exam_list">
                     <div class="upload-container" id="examUploadContainer">
                         <div class="upload-text">
@@ -93,40 +94,8 @@
                     <label>Venue</label>
                     <input type="text" name="venue" value="{{ venue_text }}">
                 </div>
-
-
-                    <label id="departmentLabel">Department</label>
-                    <select name="courseDepartment" required>
-                        <option value="" disabled selected>Select Department</option>
-                        {% for dept in department_data %}
-                            <option value="{{ dept.departmentCode }} - {{ dept.departmentName }}">
-                                ({{ dept.departmentCode }}) {{ dept.departmentName }}
-                            </option>
-                        {% endfor %}
-                    </select><br>
-
-                    <label>Course Code</label>
-                    <input type="text" name="courseCode" value="{{ courseCode_text }}" required><br>
-
-                    <label>Course Section</label>
-                    <input type="text" name="courseSection" value="{{ courseSection_text }}" required><br>
-
-                    <label>Course Name</label>
-                    <input type="text" name="courseName" value="{{ courseName_text }}" required>
-                </div>
-
-                <div class="form-right">
-                    <label>Course Credit Hour(s)</label>
-                    <input type="number" name="courseHour" value="{{ courseHour_text }}" required><br>
-
-                    <label>Practical Lecturer</label>
-                    <input type="text" name="coursePractical" value="{{ coursePractical_text }}"><br>
-
-                    <lable>Tutorial Lecturer</lable>
-                    <input type="text" name="courseTutorial" value="{{ courseTutorial_text }}">
-                </div>
             </div>
-            
+
             <br>
             {% if courseUploadResult %}
                 <div class="result-message">{{ courseUploadResult }}</div>
