--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -15,7 +15,7 @@
     </div>
 
     <!-- Manual Form -->
-    <form id="manualForm" action="{{ url_for('admin_manageDepartment') }}" method="POST" style="display: none;">
+    <form id="manualForm" action="{{ url_for('admin_manageDepartment') }}" method="POST">
         <div id="manualSection" class="function-frame">
             <h4 style="text-align: center;">Manual Data Entry Section</h4>
             <div class="profile-frame">
