--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -111,7 +111,7 @@
 
             <!-- Upload Form Submit -->
             <div class="button-wrapper">
-                <button type="submit">Upload Course</button>
+                <button type="submit">Add New Course</button>
             </div>
         </div>
     </form>
