--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -46,7 +46,7 @@
 
             <!-- Upload Form Submit -->
             <div class="button-wrapper">
-                <button type="submit">Upload Course</button>
+                <button type="submit">Add New Department</button>
             </div>
         </div>
     </form>
