--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -52,7 +52,7 @@
 
                 <!-- Upload Form Submit -->
                 <div class="button-wrapper">
-                    <button type="submit">Upload Course</button>
+                    <button type="submit">Upload Exam</button>
                 </div>
             </div>
         </div>
@@ -112,7 +112,7 @@
 
             <!-- Upload Form Submit -->
             <div class="button-wrapper">
-                <button type="submit">Upload Course</button>
+                <button type="submit">Add New Exam</button>
             </div>
         </div>
     </form>
