--- a/app/static/css/frontPart.css
+++ b/app/static/css/frontPart.css
@@ -17,7 +17,7 @@ body {
 form {
     text-align: center;
     width: 35%;
-    padding: 50px;
+    padding: 3%;
     border: 2px solid #ccc;
     border-radius: 10px;
     background: #fff;
