--- a/app/templates/adminPart/adminProfile.html
+++ b/app/templates/adminPart/adminProfile.html
@@ -18,7 +18,7 @@
                 <input type="text" name="email" value="{{ admin_email }}" readonly>
             </div>
 
-            <div>
+            <div class="form-middle">
                 <label>Gender</label>
                 <input type="text" name="gender" value="{{ admin_gender }}" readonly><br>
 
