--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -77,16 +77,18 @@
                     <input type="text" name="courseCode" value="{{ courseCode_text }}" required><br>
 
                     <label>Course Section</label>
-                    <input type="text" name="courseSection" value="{{ courseSection_text }}" required><br>
+                    <input type="text" name="courseSection" value="{{ courseSection_text }}" required>
+                </div>
 
+                <div class="form-middle">
                     <label>Course Name</label>
-                    <input type="text" name="courseName" value="{{ courseName_text }}" required>
+                    <input type="text" name="courseName" value="{{ courseName_text }}" required><br>
+
+                    <label>Course Credit Hour(s)</label>
+                    <input type="number" name="courseHour" value="{{ courseHour_text }}" required>
                 </div>
 
                 <div class="form-right">
-                    <label>Course Credit Hour(s)</label>
-                    <input type="number" name="courseHour" value="{{ courseHour_text }}" required><br>
-
                     <label>Practical Lecturer</label>
                     <input type="text" name="coursePractical" value="{{ coursePractical_text }}"><br>
 
