--- a/app/templates/adminPart/adminManageDepartment.html
+++ b/app/templates/adminPart/adminManageDepartment.html
@@ -19,12 +19,10 @@
         <div id="manualSection" class="function-frame">
             <h4 style="text-align: center;">Manual Data Entry Section</h4>
             <div class="profile-frame">
-                <div class="form-left">
+                <div style="display:flex; justify-content: space-evenly;">
                     <label>Department Code</label>
                     <input type="text" name="departmentCode" value="{{ departmentCode_text }}">
-                </div>
 
-                <div class="form-right">
                     <label>Department Name</label>
                     <input type="text" name="departmentName" value="{{ departmentName_text }}">
                 </div>
